--- a/gb/15/10/28/n4560320.md
+++ b/gb/15/10/28/n4560320.md
@@ -1,15 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wccaxy2110/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wccaxy2110/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wccaxy2110/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wccaxy2110/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>达城讲古之四－－四十年前的达拉斯牛仔队</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2015/10/Cowboys_Stadium_field-600x400.jpg" />
-<h6>Dallas Cowboys 2009(<a href="https://commons.wikimedia.org/wiki/File:Cowboys_Stadium_field.jpg">Mahanga/Wikimedia Commons
-</h6>
+
+<h6></h6>
 <hr>
-<p>【大纪元2015年10月28日讯】提起<ahref="https://github.com/wccaxy2110/djy/blob/master/gb/tag/%E8%BE%BE%E6%8B%89%E6%96%AF.md#1">达拉斯</a>，一般美国人能联想到的，除了让达拉斯人“不堪回首”的甘迺迪总统遇刺案，就是那被恭维成“美国队”的达拉斯牛仔队啦！达拉斯的华人，像我一样入境问俗，成为牛仔球迷的当不在少数，不过四十年前一些与牛仔队有关的趣事，还是得“听”我们这些“老”死忠球迷娓娓道来，才更能凝聚各位“新”球迷的“向心力”吧？</p>
+<p>【大纪元2015年10月28日讯】提起<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%BE%BE%E6%8B%89%E6%96%AF.md#1">达拉斯</a>，一般美国人能联想到的，除了让达拉斯人“不堪回首”的甘迺迪总统遇刺案，就是那被恭维成“美国队”的达拉斯牛仔队啦！达拉斯的华人，像我一样入境问俗，成为牛仔球迷的当不在少数，不过四十年前一些与牛仔队有关的趣事，还是得“听”我们这些“老”死忠球迷娓娓道来，才更能凝聚各位“新”球迷的“向心力”吧？</p>
 <h2>牛仔队的训练场</h2>
-<p>牛仔队自1960年成军以来，曾拿过五次超级杯冠军，球迷遍及全国各州，也是现今被估计为价值最高的职业球队（包括所有篮球、棒球、足球队在内）。但又有多少达福华裔还记得，迟至上世纪八十年代中期，牛仔队的平日练习场地只是在离李察逊市仅一箭之隔的北<ahref="https://github.com/wccaxy2110/djy/blob/master/gb/tag/%E8%BE%BE%E6%8B%89%E6%96%AF.md#1">达拉斯</a>，一个非常简陋的小操场里（仅不到两英亩大）呢！与现在的豪华练习场地相比，真是有天壤之别。</p>
-<p>现今绝大部分的<ahref="https://github.com/wccaxy2110/djy/blob/master/gb/tag/%E7%BE%8E%E5%BC%8F%E8%B6%B3%E7%90%83.md#1">美式足球</a>队平日在练习时，是不会对外公开的，这是为防范所练习的一般招式与特殊“诡招”（Trick Plays）可能被对手预先知晓，导致先机尽失。不过八十年代中期以前，牛仔队平日练习的场地是在环城高速公路635 LBJ与Abrams路交叉口之西南角（进口则开在Forest Lane上），练习场地仅赖一栋座落在Service Road上的Super 8三层楼汽车旅馆，把它与LBJ高速路隔开。所以只要站在旅馆面南客房的走道上，就可以一览无遗的俯瞰牛仔队的练习场，场上的一切活动毫无机密可言。敌对的足球队自然不会放过这偷窥牛仔战术的机会，他们甚至大剌剌地在足球季时，包租了所有旅馆的三楼客房，躲在窗后架起摄影机，全程偷拍牛仔队的练习过程呢！</p>
+<p>牛仔队自1960年成军以来，曾拿过五次超级杯冠军，球迷遍及全国各州，也是现今被估计为价值最高的职业球队（包括所有篮球、棒球、足球队在内）。但又有多少达福华裔还记得，迟至上世纪八十年代中期，牛仔队的平日练习场地只是在离李察逊市仅一箭之隔的北<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%BE%BE%E6%8B%89%E6%96%AF.md#1">达拉斯</a>，一个非常简陋的小操场里（仅不到两英亩大）呢！与现在的豪华练习场地相比，真是有天壤之别。</p>
+<p>现今绝大部分的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BE%8E%E5%BC%8F%E8%B6%B3%E7%90%83.md#1">美式足球</a>队平日在练习时，是不会对外公开的，这是为防范所练习的一般招式与特殊“诡招”（Trick Plays）可能被对手预先知晓，导致先机尽失。不过八十年代中期以前，牛仔队平日练习的场地是在环城高速公路635 LBJ与Abrams路交叉口之西南角（进口则开在Forest Lane上），练习场地仅赖一栋座落在Service Road上的Super 8三层楼汽车旅馆，把它与LBJ高速路隔开。所以只要站在旅馆面南客房的走道上，就可以一览无遗的俯瞰牛仔队的练习场，场上的一切活动毫无机密可言。敌对的足球队自然不会放过这偷窥牛仔战术的机会，他们甚至大剌剌地在足球季时，包租了所有旅馆的三楼客房，躲在窗后架起摄影机，全程偷拍牛仔队的练习过程呢！</p>
 <p>我1974年搬到达拉斯，于1982年住进现在的家，离牛仔队老练习场约不到两英里的距离，那时孩子们都还不到十岁，俩人从小耳濡目染，被超级牛仔球迷的老爸带着看牛仔队的球赛，与老爸的球迷疯劲不相上下，父子三人也经常在他们学校下课后，站在Super 8旅馆二、三楼的走道上，挤在一大堆球迷中间看牛仔队员练球。不但如此，自1986年至2001年的连续十六年间（孩子们的成长时期），我们还拥有四张牛仔队季票呢，可自夸是牛仔队的超级球迷啦！</p>
 <p>那个年代的牛仔队球员为了练球之方便，绝大部分就近住在北达拉斯或是李察逊市内。现在的理奇伦社区学院（Richland Community College）校园内，有一条长约一英哩的步道，在此步道之南，校区与一排民房相接，那几栋房子的主人全都是牛仔队球员。有栋两层楼房子（楼上有一面巨型窗子，面对理奇伦学院操场步道的那栋），牛仔队名球星查理?瓦特斯（Charlie Waters）就是它的第一任屋主。</p>
 <h2>早期的两位杰出四分卫</h2>
@@ -29,7 +28,7 @@
 <p>提起前牛仔队总教头汤姆?兰德瑞﹝Tom Landry﹞，他在美国足球界的名气绝不下于文斯?隆巴迪（Vince Lombardi）。喔，你可能会问，隆巴迪是谁？一甲子以前，他与兰德瑞两人同时在纽约巨人队任职，隆巴迪是“攻击教练”，兰德瑞则是“防守教练”，上世纪在美国足球联盟NFL扩大成立之前，他俩共同指挥、领导纽约巨人队，夺得好几次全国冠军。</p>
 <p>两人日后皆离开纽约，兰德瑞来到达拉斯，隆巴迪则去了绿湾（Green Bay）。1967年，两个不同的美足联盟合并为NFL，头两届超级杯的冠军，就是隆巴迪领导的包装人队（Green Bay Packers）获得的，他的声誉也就如日中天。兰德瑞则率达拉斯牛仔队于第五与第六届决赛时，进入超级杯比赛，获得第六届超级杯冠军。</p>
 <p>1970年9月初，我刚由纽约长岛的打工地方赶回密西西比州大，第一天进课堂，教授还没有开始讲课，就与班上老美同学在热烈讨论“隆巴迪的死讯”。当时我虽然已热中足球，但足球“知识”有限，只是密州大猛犬队（Mississippi State Bulldogs）的球迷而已，职业球赛则仅看纽约水牛城的野牛队（Buffalo Bills）的比赛，理由十分简单，因为当时野牛队中有一名所向披靡的超级跑锋，就是那“前无古人”（在我心目中也是“后无来者”）的辛普森（O. J. Simpson）。这会儿大家讨论起“隆巴迪的死讯”来，以我这有限的“足球常识”，就连插嘴的资格都没有。好啦，言归正传，这隆巴迪在美足界是传奇人物，备受尊崇，他因癌症去世时，得年仅五十七。死后，NFL成员一致决议，把超级杯的冠军奖杯命名为“隆巴迪杯”。</p>
-<p>其实兰德瑞与隆巴迪两人对<ahref="https://github.com/wccaxy2110/djy/blob/master/gb/tag/%E7%BE%8E%E5%BC%8F%E8%B6%B3%E7%90%83.md#1">美式足球</a>的贡献是不相上下的，他俩共同“研发”出许多今日美式足球界奉为圭臬的进攻与防守队型。只是隆巴迪去世时，兰德瑞还年轻，若兰德瑞死得早，说不定超级杯的冠军奖杯就会被命名为“兰德瑞杯”啦！喔，你也别替兰德瑞叫屈，至少他在达福地区是备受尊崇的，连接达、福两个双子星城的三十号州际高速公路，不就已被命名为汤姆?兰德瑞公路（Tom Landry Highway）了吗？</p>
+<p>其实兰德瑞与隆巴迪两人对<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BE%8E%E5%BC%8F%E8%B6%B3%E7%90%83.md#1">美式足球</a>的贡献是不相上下的，他俩共同“研发”出许多今日美式足球界奉为圭臬的进攻与防守队型。只是隆巴迪去世时，兰德瑞还年轻，若兰德瑞死得早，说不定超级杯的冠军奖杯就会被命名为“兰德瑞杯”啦！喔，你也别替兰德瑞叫屈，至少他在达福地区是备受尊崇的，连接达、福两个双子星城的三十号州际高速公路，不就已被命名为汤姆?兰德瑞公路（Tom Landry Highway）了吗？</p>
 <p>教练兰德瑞在球场上与私下，都是不茍言笑的“酷”先生。他有多“酷”呢？我给你讲几个他“老神在在”的故事──是没有加油添醋的真人实事。</p>
 <p>平日木讷寡言，喜爱穿着西装，头戴尼帽，站在球场边“指挥若定”的兰德瑞，电视镜头在绝大部分时间，都只能捕捉到他木无表情的“扑克脸孔”，最绝的是当球场上有精彩情节时，观众的欢呼声或倒彩声，球场内外球员欢欣的跳跃或沮丧的咒骂声，似乎都很少改变他那看似“白痴”的形象。偶尔镜头捕捉到他脸上有表情时，电视讲评者都会把它当作旁白时的“花絮”呢！有一次，一位记者在访问兰德瑞时，抖胆问到“你在球场边为何能如此地‘视若无睹’呢”？他的答复十分“经典”，“我通常在这一档（Down）正进行时，专心地在盘算下一档该如何着手，根本没时间去庆贺或是沮丧呢！”这也令我想起围棋或是西洋棋的高手们，一般不都是在心中盘算到下面十余步棋该如何走，才能抢到先机嘛。</p>
 <h2>兰德瑞在二战时的英勇事迹</h2>
@@ -66,55 +65,54 @@
 <p>牛仔队今年本来是被看好有机会进入季后决赛的，虽然上一季以一千八百四十码的佳积，破了牛仔队成军以来跑锋纪录的莫瑞（DeMarco Murray）被费城鹰队高价挖走，但是四分卫罗莫（Tony Romo）与超级接球员布莱恩（Dez Bryant）还是牛仔队的主将，只要新来的跑锋能像上季一样，能分担进攻之责任，减轻罗莫必须传球（Passing）的压力，牛仔队仍然是有极大潜能打进超级杯的。</p>
 <p>可惜开赛两周以来，四分卫罗莫与接球员布莱恩接连因骨折而列入伤兵名单，要休养至少两个月。候补四分卫威登（Brandon Weeden）虽然打得不赖，但是他没有像罗莫一般的机动性（Mobility），能在攻势保护圈溃散时，左闪右躲地继续完成任务。当然，打美式足球是团队性的，不会因为一、两位主将受伤就完全瓦解了，但是四分卫仍然是全队的灵魂人物，是很难替代的。</p>
 <p>所以我认为牛仔队今年打进季后赛的可能性已不大，遑论进入超级杯决赛啦！除非威登在四分卫罗莫伤愈回来前的八场球赛中至少赢上四场，才有让牛仔队进入季后赛的可能性。是否如我所料，大家且拭目以待罢！<br />
-<ahref="https://github.com/wccaxy2110/djy/blob/master/gb/tag/%E8%B0%A2%E8%A1%8C%E6%98%8C.md#1">谢行昌</a>，2015年9月于美国德州<br />
+<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B0%A2%E8%A1%8C%E6%98%8C.md#1">谢行昌</a>，2015年9月于美国德州<br />
 责任编辑：李元</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/3/22/n3828826.md#1">由WLW衍生的“想当年”</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/14/7/26/n4209696.md#1">记国府早期的军事留学生－－一段当年国军积极培植抗日战力的历史</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/14/9/18/n4251380.md#1">一个焦黑十字架的故事</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/14/9/18/n4251396.md#1">父亲艰辛的童年与他的怀乡诗作</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/1/30/n4355002.md#1">达城讲古－－“额上坟起”的钓鱼故事</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/1/30/n4355025.md#1">达城讲古－－理查逊市的点点滴滴</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/8/19/n4507483.md#1">达城讲古－－谈当年的食、住、与行</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/3/n11999777.md#1">从2020美足之季末盛事─“超级杯”谈起</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/19/9/13/n11519193.md#1">港人争民主 黄之锋盼中国人也享有民主自由</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/19/8/31/n11489376.md#1">我在太空的340天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/3/22/n3828826.md#1">由WLW衍生的“想当年”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/7/26/n4209696.md#1">记国府早期的军事留学生－－一段当年国军积极培植抗日战力的历史</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/9/18/n4251380.md#1">一个焦黑十字架的故事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/9/18/n4251396.md#1">父亲艰辛的童年与他的怀乡诗作</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/1/30/n4355002.md#1">达城讲古－－“额上坟起”的钓鱼故事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/1/30/n4355025.md#1">达城讲古－－理查逊市的点点滴滴</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/8/19/n4507483.md#1">达城讲古－－谈当年的食、住、与行</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/7/n13422320.md#1">雕刻大师的旅程——从苏联被迫害到自由的美国</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/28/n13121292.md#1">热忱不懈 雕版艺术教育家 潘元石</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/12/n12397963.md#1">【大时代华人】一根“牙签”背后的爱情</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513103.md#1" target="_blank">唐铭：维权老兵需了解韩战的中国战俘刺青浪潮</a></li><li><a href="https://github.com/wccaxy2110/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/11/n11250223.md#1" target="_blank">美国北德州十城市宣布 法轮大法日</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/3/n11022591.md#1" target="_blank">玉清心：物理大师束星北 一曲悲怆的挽歌</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977691.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(1) 不一样的人生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/27/n11981662.md#1">【文史】大难前如何避祸 埃及十灾给启示</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/29/n11985219.md#1">大疫下圣母玛利亚现身阿根廷天空？</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11990591.md#1">机会难得 美国专业摄影师协会免费网上教学</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/23/n11965516.md#1">【命理】为何算命师说他：死后方行好运享光彩？　</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/29/n11986117.md#1">轮回辗转 身前身后事茫茫</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/2/n11998786.md#1">【新闻看点】自诩“大国担当”中共须答7问</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/2/n11998644.md#1">【纪元播报】疫情压力测算 中共政权还能挺多久</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/2/n11998726.md#1">疫情下粮食涨价 中共越辟谣民众越抢购</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11992910.md#1">中国学者携带活病毒瓶进出美国海关</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11995606.md#1">中国多地现抢米潮 当局“辟谣”难掩窘境</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11993872.md#1">【拍案惊奇】老任平安习总不妙？粮荒近逼全球</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11994892.md#1">疫情下 太阳马戏团裁员95% 可能申请破产</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11994398.md#1">防疫当前 洋女婿吴凤呼吁国际与台湾合作</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11996094.md#1">疫情下导演李安身处纽约 重回家庭煮夫生活</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11995498.md#1">美剧《女超人》女星染疫 自曝藉呼吸机呼吸</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11991233.md#1">澳洲水族馆关闭 海狮充当游客在馆内趴趴走</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11990591.md#1">机会难得 美国专业摄影师协会免费网上教学</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/30/n11989588.md#1">吃肉强化免疫力 美专家4方法抵御病毒</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11991233.md#1">澳洲水族馆关闭 海狮充当游客在馆内趴趴走</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11992849.md#1">无症状感染者传染力不低 如何预防沉默传播？</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11995936.md#1">纽约医师分享中共肺炎疗法 称0死亡0插管</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679393.md#1">【军事热点】美军主导联合军演 在南海轮番展开</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wccaxy2110/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wccaxy2110/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/10/28/n4560320.htm">达城讲古之四－－四十年前的达拉斯牛仔队</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/10/28/n4560320.htm">达城讲古之四－－四十年前的达拉斯牛仔队</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wccaxy2110/djy/blob/master/gb/15/10/28/n4560320.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wccaxy2110/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wccaxy2110/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/15/10/28/n4560320.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
