--- a/gb/16/12/1/n8547384.md
+++ b/gb/16/12/1/n8547384.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wccaxy2110/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wccaxy2110/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wccaxy2110/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wccaxy2110/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>牛仔队四分卫戴克  一颗闪亮的足坛新星</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/03/Fotolia_103287945_Subscription_L-320x200.jpg" />
+
 <h6></h6>
 <hr>
 <p><strong>两个全新的英文单字</strong></p>
 <p>你还记得在2011到2012年美国职业篮球季中，流行着一个崭新的英文字“林来疯Linsanity”吗？那是在华裔球员林书豪的第一个球坛巅峰时期，美国新闻界为他所创建的，用以形容林书豪不可思议的崛起﹝顺便在此深深期盼他的第二个球坛巅峰时期之到来﹞。四年后，体坛又出了一个奇葩，那就是达拉斯牛仔队的“菜鸟”四分卫戴克，他的全名是瑞恩?达科塔?普理司卡﹝Rayne Dakota Prescott﹞，“达科塔”就是那美国南、北达科塔州的同一个字，因为自幼就被亲朋好友昵称为戴克，所以他早就没有用“瑞恩”的原名。这会儿，他那“跌碎了所有球评眼镜”式的异军突起，也让新闻界为他创建了一个新字──“戴克疯Dakmania”。又由于戴克是攻击主帅的四分卫，球风稳健，新闻界还增加了另一个新字──“戴克攻势Dak-Attack”，用以形容他那“势不可挡”的凌厉攻势。据早先估计，全美各地的足球迷有百分之二十左右是牛仔队迷，所以当这“戴克疯”及“戴克攻势”的新名词，被电台播音员们毫不犹豫地朗朗上口后，很容易地就疯传全美国！</p>
-<figure id="attachment_8547453" style="width: 450px" class="wp-caption aligncenter"><img class="wp-image-8547453 size-medium" src="https://i.epochtimes.com/assets/uploads/2016/12/621459980-450x315.jpg" alt="图：美国职业橄榄球达拉斯牛仔队四分卫戴克(全名“瑞恩?达科塔?普理司卡”Rayne Dakota Prescott) (GettyImages)" width="450" b="315" /><figcaption class="wp-caption-text">图：美国职业橄榄球达拉斯牛仔队四分卫戴克(全名“瑞恩?达科塔?普理司卡”Rayne Dakota Prescott) (GettyImages)</figcaption></figure>
+<figure id="attachment_8547453" aria-describedby="caption-attachment-8547453" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/12/621459980-450x315.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-8547453 size-medium" src="https://i.epochtimes.com/assets/uploads/2016/12/621459980-450x315.jpg" alt="图：美国职业橄榄球达拉斯牛仔队四分卫戴克(全名“瑞恩?达科塔?普理司卡”Rayne Dakota Prescott) (GettyImages)" width="450" b="315" /></a><figcaption id="caption-attachment-8547453" class="wp-caption-text">图：美国职业橄榄球达拉斯牛仔队四分卫戴克(全名“瑞恩?达科塔?普理司卡”Rayne Dakota Prescott) (GettyImages)</figcaption></figure>
 <p><strong>成为足球迷的经过</strong></p>
 <p>美式足球所使用的球，除北美洲之外，全世界各国都称之为Rugby﹝当然，打球方式是不一样的﹞。我当年在台北建国中学念高中时，建中的橄榄球队已称霸台湾十多年，我也早已习惯那“非美国式”的橄榄球打法，所以初到新大陆时，在电视上看美式足球转播时，十分不习惯美国人“霸道地”硬是将全世界公认的橄榄球，名之为Football。说是这么说，那儿会想到只不过“短短的”几十年后，我自己居然“入境随俗”，被美国人给“同化”掉啦！你现在如果在我面前提到Football这个字，我“直觉”地就会联想到那美式橄榄球去啦！</p>
 <p>来美国的头两年，我在密西西比州立大学﹝Mississippi State University﹞念书，“自然而然”地成为猛犬队﹝Mississippi State Bulldogs﹞球迷，怎的？你不同意我用“自然而然”来形容我之成为斗犬队球迷？老实告诉你，根据统计，全美大学中有美式足球校队的男学生﹝女生暂时不算在内﹞，有百分之九十以上都是该足球校队之球迷。课余“研讨”足球经是常态，甚至于上课时，全班在进入正课之前，由教授领导大家先聊几分钟“足球经”是常态，你若是没有足够的“足球知识”，不能热烈地加入讨论，会被人当作是“不通庶务”的书呆子。</p>
 <p>离开密州大后不久，我应聘到达拉斯就业，又入境随俗，“自然而然”地成为牛仔队球迷，但这几十年来，每到秋季开赛的足球季中，我了除关心牛仔队的战绩之外，仍然对密州大猛犬队念念不忘，也都会去关心他们的战绩，只可惜密西西比州的另一所大学密西西比大学﹝被称为Ole Miss的University of Mississippi，也是该州州立大学之一﹞有特别强的足球传统，经常把密西西比州猛犬队给痛宰，这两队是死敌，每年会在感恩节假日的星期六厮杀一场，争夺“密西西比州长杯”。因为太过入迷，猛犬队若是输掉，会让我当年的感恩假日情绪相当低落。实话实说，历年来Ole Miss出过不少足球名人，大家熟知的现任纽约市巨人队的四分卫伊莱?曼宁﹝Eli Manning，曾两度获得超级杯冠军﹞，就是Ole Miss出身的。猛犬队虽然比较不出名，没有产生过几个值得称道的职业球员，但密州大是我的母校，我别无选择，无论输赢，这辈子都是忠实的“猛犬迷”。</p>
 <p>几十年来我一直对猛犬队寄以厚望，但是“盼胜”有如“大旱望云霓”，就是没看到猛犬队打过几次像样的球赛。直到两年前，我注意到一向不够“猛”的猛犬队突然谷底翻身了，不但战绩出众，居然还破了密州大纪录，有五周的时间是全国排名第一！原来队上来了个杰出的四分卫戴克?普理司卡，在他的领导下，猛犬队一度所向披靡，跌碎了所有球评的眼镜不说，也大大地翻转了拉斯维加斯的“体育赌盘”！</p>
-<figure id="attachment_8547460" style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-8547460" src="https://i.epochtimes.com/assets/uploads/2016/12/xie-450x400.jpg" alt="图：这是我自己制作的牛仔迷立体海报。图中的一个穿着戴克4号球衣的卡通人物，食指指向天际，那正是戴克在“达阵”时之招牌胜利英姿。（作者提供）" width="450" b="400" /><figcaption class="wp-caption-text">图：这是我自己制作的牛仔迷立体海报。图中的一个穿着戴克4号球衣的卡通人物，食指指向天际，那正是戴克在“达阵”时之招牌胜利英姿。（作者提供）</figcaption></figure>
+<figure id="attachment_8547460" aria-describedby="caption-attachment-8547460" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/12/xie-450x400.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-8547460" src="https://i.epochtimes.com/assets/uploads/2016/12/xie-450x400.jpg" alt="图：这是我自己制作的牛仔迷立体海报。图中的一个穿着戴克4号球衣的卡通人物，食指指向天际，那正是戴克在“达阵”时之招牌胜利英姿。（作者提供）" width="450" b="400" /></a><figcaption id="caption-attachment-8547460" class="wp-caption-text">图：这是我自己制作的牛仔迷立体海报。图中的一个穿着戴克4号球衣的卡通人物，食指指向天际，那正是戴克在“达阵”时之招牌胜利英姿。（作者提供）</figcaption></figure>
 <p><strong>戴克是如何崛起的</strong></p>
 <p>戴克是在路易斯安那州西北部，一个美国二十号州际公路上名为豪顿﹝Houghton﹞小镇上成长的，豪顿镇离德克萨斯州非常近，所以他自幼就是个达拉斯牛仔队球迷，“效力牛仔队”是他儿时的梦想。岂料他居然梦想成真，在2016年的NFL年度选秀的第三天，在第四轮选秀近尾声时，被牛仔队选中。因为他是第四轮才被选中的，显然各球队对他的“选秀价值”评鉴不太高，只是选秀时被选中的第135位球员而已，在他之前，已有七位四分卫被其他球队选走，这么优秀的球员会居然“沦落”到第四轮临结束时才被牛仔队“勉强”选上。我用“勉强”这两个字来形容，是因为今年牛仔队中意的四分卫选秀榜上，戴克也只列名第三而已，而前两名到第四轮时都早已“花落别家”。</p>
 <p>戴克在密西西比州立大学的足球史上，是个不折不扣的“前无古人”之超级英雄人物。他不但是足球队长，学业亦十分优秀，在密州大总共读了五年，你可别以为他读“当”了一年，那是因为他不仅拿到教育心理的学士学位，还拿到心理系中的“统御专业”硕士学位，放眼当今之美式足球界，没有几个球员有这样好的学历，这也证明他原本就不是一般“头脑简单，四肢发达”的运动员。</p>
@@ -59,48 +59,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/8/2/n3932130.md#1">足球季话达拉斯牛仔队</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/14/9/18/n4251380.md#1">一个焦黑十字架的故事</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/1/30/n4355002.md#1">达城讲古－－“额上坟起”的钓鱼故事</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/8/19/n4507483.md#1">达城讲古－－谈当年的食、住、与行</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/10/28/n4560320.md#1">达城讲古之四－－四十年前的达拉斯牛仔队</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/2/19/n4643503.md#1">山居随笔：简介德州的“山丘之乡”</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/2/29/n4650871.md#1">老侨达城讲古－－习画记趣</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/4/15/n7556779.md#1">山居随笔：德州的野花季节</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/7/1/n8054290.md#1">勒克辛顿号航母和太平洋战争博物馆</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/8/26/n8238455.md#1">“底特律”的故事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/8/2/n3932130.md#1">足球季话达拉斯牛仔队</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/9/18/n4251380.md#1">一个焦黑十字架的故事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/1/30/n4355002.md#1">达城讲古－－“额上坟起”的钓鱼故事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/8/19/n4507483.md#1">达城讲古－－谈当年的食、住、与行</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/10/28/n4560320.md#1">达城讲古之四－－四十年前的达拉斯牛仔队</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/2/19/n4643503.md#1">山居随笔：简介德州的“山丘之乡”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/2/29/n4650871.md#1">老侨达城讲古－－习画记趣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/4/15/n7556779.md#1">山居随笔：德州的野花季节</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/7/1/n8054290.md#1">勒克辛顿号航母和太平洋战争博物馆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/26/n8238455.md#1">“底特律”的故事</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/20/n11125994.md#1" target="_blank">谁是中华文化的最大破坏者？</a></li><li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11178933.md#1" target="_blank">亚利桑那媒体：中共强摘器官对美国有何影响</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/25/n11000879.md#1" target="_blank">共产暴政录：文革中究竟死了多少人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/15/n3683727.md#1" target="_blank">历史回顾：公安部给李洪志先生的感谢信</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/27/n11981662.md#1">【文史】大难前如何避祸 埃及十灾给启示</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/29/n11985219.md#1">大疫下圣母玛利亚现身阿根廷天空？</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11990591.md#1">机会难得 美国专业摄影师协会免费网上教学</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/23/n11965516.md#1">【命理】为何算命师说他：死后方行好运享光彩？　</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/29/n11986117.md#1">轮回辗转 身前身后事茫茫</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/2/n11998786.md#1">【新闻看点】自诩“大国担当”中共须答7问</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/2/n11998644.md#1">【纪元播报】疫情压力测算 中共政权还能挺多久</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/2/n11998726.md#1">疫情下粮食涨价 中共越辟谣民众越抢购</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11992910.md#1">中国学者携带活病毒瓶进出美国海关</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11995606.md#1">中国多地现抢米潮 当局“辟谣”难掩窘境</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11993872.md#1">【拍案惊奇】老任平安习总不妙？粮荒近逼全球</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11994892.md#1">疫情下 太阳马戏团裁员95% 可能申请破产</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11994398.md#1">防疫当前 洋女婿吴凤呼吁国际与台湾合作</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11996094.md#1">疫情下导演李安身处纽约 重回家庭煮夫生活</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11995498.md#1">美剧《女超人》女星染疫 自曝藉呼吸机呼吸</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11991233.md#1">澳洲水族馆关闭 海狮充当游客在馆内趴趴走</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11990591.md#1">机会难得 美国专业摄影师协会免费网上教学</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/30/n11989588.md#1">吃肉强化免疫力 美专家4方法抵御病毒</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11991233.md#1">澳洲水族馆关闭 海狮充当游客在馆内趴趴走</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11992849.md#1">无症状感染者传染力不低 如何预防沉默传播？</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11995936.md#1">纽约医师分享中共肺炎疗法 称0死亡0插管</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679393.md#1">【军事热点】美军主导联合军演 在南海轮番展开</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wccaxy2110/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wccaxy2110/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/12/1/n8547384.htm">牛仔队四分卫戴克  一颗闪亮的足坛新星</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/12/1/n8547384.htm">牛仔队四分卫戴克  一颗闪亮的足坛新星</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wccaxy2110/djy/blob/master/gb/16/12/1/n8547384.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wccaxy2110/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wccaxy2110/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/16/12/1/n8547384.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
