--- a/gb/22/3/29/n13680855.md
+++ b/gb/22/3/29/n13680855.md
@@ -74,7 +74,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/27/n10252063.md#1" target="_blank">袁斌：用鲜血染红的“恶之花”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/1/13/n4615407.md#1" target="_blank">怪病神奇痊愈的故事</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/17/n10310732.md#1" target="_blank">共产暴政录：台湾土改与大陆土改的对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/29/n11486472.md#1" target="_blank">听音乐喜得大法 以色列学员伦敦街头讲真相</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
